...
        }

        Box(modifier = Modifier.weight(1f), contentAlignment = Alignment.Center) {
            IconButton(onClick = onSeekBack, modifier = Modifier.size(btnSize)) {
                Icon(
                    painter = painterResource(id = R.drawable.ic_player_seek_back_10),
                    contentDescription = "Seek Back",
                    modifier = Modifier.size(iconSize + 8.dp),
                    tint = colorScheme.onSurfaceVariant
                )
            }
        }

...
        }

        Box(modifier = Modifier.weight(1f), contentAlignment = Alignment.Center) {
            IconButton(onClick = onSeekForward, modifier = Modifier.size(btnSize)) {
                Icon(
                    painter = painterResource(id = R.drawable.ic_player_seek_forward_10),
                    contentDescription = "Seek Forward",
                    modifier = Modifier.size(iconSize + 8.dp),
                    tint = colorScheme.onSurfaceVariant
                )
            }
        }

...
